# naive_bayes

./: .gitignore  .gitmodules  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac  main.cc  naive_bayes.cc  naive_bayes.h  sample_train.txt  test.cc  test.h  train.txt
src/: Makefile.am  Makefile.in  field_table.cc  field_table.h  freq_table.h  main.cc  naive_bayes.cc  naive_bayes.h  shuffle.cc  test.cc  test.h  top_queue.h  train.cc  train.h
