bin_PROGRAMS = naive_bayes shuffle
naive_bayes_SOURCES =        \
	freq_table.h         \
	json.hpp             \
	naive_bayes.cc       \
	naive_bayes.h        \
	main.cc              \
	test.cc              \
	test.h               \
	train.cc             \
	train.h              \
        top_queue.h
shuffle_SOURCES = shuffle.cc
AM_CXXFLAGS = -std=c++11
